--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,34 +19,50 @@
     "load-test:100k": "tsx load-testing/run-load-test.ts 100000"
   },
   "dependencies": {
+    "@angular/cdk": "^17.2.2",
+    "@angular/cli": "^17.2.3",
+    "@angular/common": "^17.2.4",
+    "@angular/core": "^17.3.12",
+    "@angular/platform-browser": "^17.2.4",
+    "@angular/platform-browser-dynamic": "^17.2.4",
+    "@angular/router": "^17.2.4",
     "@aws-sdk/client-s3": "^3.583.0",
     "@aws-sdk/credential-providers": "^3.583.0",
     "@aws-sdk/lib-storage": "^3.478.0",
     "@aws-sdk/s3-request-presigner": "^3.583.0",
+    "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
+    "@cds/core": "^6.9.2",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^17.0.1",
+    "@deenruv/admin-ui": "workspace:*",
     "@deenruv/admin-ui-plugin": "workspace:*",
     "@deenruv/asset-server-plugin": "workspace:*",
     "@deenruv/common": "workspace:*",
+    "@deenruv/copy-order-plugin": "workspace:*",
     "@deenruv/core": "workspace:*",
-    "@deenruv/in-realization-plugin": "workspace:*",
-    "@deenruv/wfirma-plugin": "workspace:*",
-    "@deenruv/przelewy24-plugin": "workspace:*",
-    "@deenruv/inpost-plugin": "workspace:*",
-    "@deenruv/deenruv-examples-plugin": "workspace:*",
-    "@deenruv/seo-plugin": "workspace:*",
     "@deenruv/dashboard-widgets-plugin": "workspace:*",
-    "@deenruv/facet-harmonica-plugin": "workspace:*",
-    "@deenruv/product-badges-plugin": "workspace:*",
-    "@deenruv/method-modal-plugin": "workspace:*",
+    "@deenruv/deenruv-examples-plugin": "workspace:*",
     "@deenruv/elasticsearch-plugin": "workspace:*",
     "@deenruv/email-plugin": "workspace:*",
+    "@deenruv/facet-harmonica-plugin": "workspace:*",
+    "@deenruv/in-realization-plugin": "workspace:*",
+    "@deenruv/inpost": "workspace:*",
+    "@deenruv/inpost-plugin": "workspace:*",
     "@deenruv/job-queue-plugin": "workspace:*",
-    "@deenruv/product-options-fields-plugin": "workspace:*",
+    "@deenruv/method-modal-plugin": "workspace:*",
     "@deenruv/order-line-attributes-plugin": "workspace:*",
-    "@deenruv/copy-order-plugin": "workspace:*",
+    "@deenruv/product-badges-plugin": "workspace:*",
+    "@deenruv/product-options-fields-plugin": "workspace:*",
+    "@deenruv/przelewy24-plugin": "workspace:*",
+    "@deenruv/seo-plugin": "workspace:*",
+    "@deenruv/wfirma-plugin": "workspace:*",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "~10.3.10",
     "@nestjs/serve-static": "^4.0.2",
-    "typescript": "5.3.3"
+    "@ng-select/ng-select": "^12.0.7",
+    "tslib": "^2.6.2",
+    "typescript": "5.3.3",
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
     "@deenruv/testing": "workspace:*",
@@ -55,10 +71,10 @@
     "concurrently": "^8.2.2",
     "csv-stringify": "^6.4.6",
     "dayjs": "^1.11.10",
+    "pg": "^8.11.3",
     "progress": "^2.0.3",
-    "typeorm": "^0.3.20",
     "tsx": "^4.19.1",
-    "pg": "^8.11.3"
+    "typeorm": "^0.3.20"
   },
   "peerDependencies": {
     "typeorm": "^0.3.20"
