--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -29,6 +29,7 @@
     "@deenruv/przelewy24-plugin": "workspace:*",
     "@deenruv/facet-harmonica-plugin": "workspace:*",
     "@deenruv/wfirma-plugin": "workspace:*",
+    "@deenruv/inpost-plugin": "workspace:*",
     "@deenruv/admin-types": "workspace:*",
     "@aexol-studio/hooks": "^0.2.16",
     "class-variance-authority": "^0.7.0",
