--- a/packages/inpost/package.json
+++ b/packages/inpost/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@deenruv/inpost",
   "version": "0.1.28",
-  "type": "module",
+  "type": "commonjs",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "rimraf dist && tspc --build",
-    "test": "node --import @deenruv/ts-node-register --test ./src/index.test.ts"
+    "test": "tsx --test ./src/index.test.ts"
   },
   "author": "",
   "license": "ISC",
