--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -44,5 +44,8 @@
     "picocolors": "^1.0.0",
     "semver": "^7.5.4",
     "tcp-port-used": "^1.0.2"
+  },
+  "peerDependencies": {
+    "@deenruv/core": "^0.1.0"
   }
 }
