--- a/packages/ui-devkit/package.json
+++ b/packages/ui-devkit/package.json
@@ -60,6 +60,7 @@
     "typescript": "5.3.3"
   },
   "peerDependencies": {
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "@deenruv/core": "^0.1.0"
   }
 }
