--- a/plugins/merchant-plugin/package.json
+++ b/plugins/merchant-plugin/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@deenruv/ui-devkit": "workspace:^",
     "@deenruv/admin-ui": "workspace:^",
@@ -45,6 +44,7 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/express": "^4.17.21",
     "@types/facebook-nodejs-business-sdk": "^20.0.2",
@@ -54,5 +54,8 @@
     "rimraf": "^5.0.10",
     "tslib": "^2.6.2",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "@deenruv/core": "^0.1.0"
   }
 }
