--- a/plugins/newsletter-plugin/package.json
+++ b/plugins/newsletter-plugin/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@nestjs/common": "~10.3.10",
     "@nestjs/graphql": "~12.2.0",
@@ -31,9 +30,13 @@
     "graphql-zeus": "^5.4.2"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@types/express": "^4.17.21",
     "rimraf": "^5.0.10",
     "tslib": "^2.6.2",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "@deenruv/core": "^0.1.0"
   }
 }
