--- a/plugins/przelewy24-plugin/package.json
+++ b/plugins/przelewy24-plugin/package.json
@@ -27,7 +27,6 @@
   "dependencies": {
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/admin-ui": "workspace:^",
     "@deenruv/ui-devkit": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
@@ -46,6 +45,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.0",
@@ -54,5 +54,8 @@
     "rimraf": "^5.0.10",
     "tslib": "^2.6.2",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "@deenruv/core": "^0.1.0"
   }
 }
