--- a/plugins/redis-strategy-plugin/package.json
+++ b/plugins/redis-strategy-plugin/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@nestjs/common": "~10.3.10",
     "@nestjs/graphql": "~12.2.0",
@@ -42,6 +41,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.0",
@@ -51,5 +51,8 @@
     "rimraf": "^5.0.10",
     "tslib": "^2.6.2",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "@deenruv/core": "^0.1.0"
   }
 }
