--- a/plugins/upsell-plugin/package.json
+++ b/plugins/upsell-plugin/package.json
@@ -28,7 +28,6 @@
     "@aws-sdk/s3-request-presigner": "^3.726.1",
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@nestjs/common": "~10.3.10",
     "@nestjs/graphql": "~12.2.0",
@@ -45,6 +44,7 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.0",
@@ -54,5 +54,8 @@
     "rimraf": "^5.0.10",
     "tslib": "^2.6.2",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "@deenruv/core": "^0.1.0"
   }
 }
