--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -1,7 +1,7 @@
 {
   "name": "panel",
   "private": true,
-  "version": "0.1.31",
+  "version": "0.1.32",
   "type": "module",
   "main": "dist/assets/index.js",
   "style": "dist/assets/index.css",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@deenruv/admin-dashboard": "workspace:*",
+    "@deenruv/merchant-plugin": "workspace:*",
     "@deenruv/product-badges-plugin": "workspace:*",
     "@deenruv/deenruv-examples-plugin": "workspace:*",
     "@deenruv/dashboard-widgets-plugin": "workspace:*",
