--- a/plugins/merchant-plugin/src/plugin-server/tsconfig.json
+++ b/plugins/merchant-plugin/src/plugin-server/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "useDefineForClassFields": false,
+    "jsx": "react-jsx",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "noLib": false,
@@ -20,6 +19,5 @@
     "resolveJsonModule": true,
     "outDir": "../../dist/plugin-server"
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "ui"]
 }
