merchant delete and communicateID to save previous handles

--- a/plugins/inpost-plugin/tsconfig.json
+++ b/plugins/inpost-plugin/tsconfig.json
@@ -6,7 +6,7 @@
   },
   "references": [
     { "path": "./src/plugin-server" },
-    { "path": "src/plugin-ui" }
+    { "path": "./src/plugin-ui" }
   ],
   "files": []
 }
