--- a/plugins/merchant-plugin/src/plugin-ui/tsconfig.json
+++ b/plugins/merchant-plugin/src/plugin-ui/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "node",
     "target": "ES2020",
-    "jsx": "react",
     "outDir": "../../dist/plugin-ui",
     "importHelpers": true,
     "declaration": true,
