--- a/packages/admin-ui/angular.json
+++ b/packages/admin-ui/angular.json
@@ -48,13 +48,13 @@
               "@clr/icons",
               "@clr/icons/shapes/all-shapes",
               "@deenruv/common/generated-types",
-              "@deenruv/common/lib/simple-deep-clone",
+              "@deenruv/common/simple-deep-clone",
               "@deenruv/common/shared-constants",
               "@deenruv/common/shared-utils",
-              "@deenruv/common/lib/normalize-string",
-              "@deenruv/common/lib/unique",
-              "@deenruv/common/lib/omit",
-              "@deenruv/common/lib/pick",
+              "@deenruv/common/normalize-string",
+              "@deenruv/common/unique",
+              "@deenruv/common/omit",
+              "@deenruv/common/pick",
               "@messageformat/core"
             ],
             "vendorChunk": true,
