--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -23,7 +23,11 @@
   "//": "These exports are just here so that we can do local testing of ui-devkit compilation by allowing the ui-devkit package to find its way to the compiled package",
   "exports": {
     ".": {
-      "default": "./src/main.ts"
+      "types": "./package/index.d.ts",
+      "esm2022": "./package/esm2022/deenruv-admin-ui.mjs",
+      "esm": "./package/esm2022/deenruv-admin-ui.mjs",
+      "default": "./package/fesm2022/deenruv-admin-ui.mjs",
+      "bun": "./src/main.ts"
     }
   },
   "dependencies": {
