--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -5,6 +5,7 @@
         "esModuleInterop": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "useDefineForClassFields": false,
         "strictPropertyInitialization": false,
         "target": "es2019",
         "strict": true,
@@ -13,6 +14,6 @@
         "outDir": "./dist",
         "baseUrl": "./"
     },
-    "exclude": ["node_modules", "admin_ui", "dist", "static"],
+    "exclude": ["node_modules", "admin_ui", "dist", "static", "test-plugins"],
     "ts-node": { "files": true }
 }
