--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,14 +5,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "populate": "tsx populate-dev-server.ts",
     "bun:server": "APP_ENV=LOCAL bun run index.ts",
     "bun:worker": "APP_ENV=LOCAL bun run index-worker.ts",
-    "run:server": "APP_ENV=LOCAL node --import @deenruv/ts-node-register index.ts",
-    "run:worker": "APP_ENV=LOCAL node --import @deenruv/ts-node-register index-worker.ts",
+    "run:server": "APP_ENV=LOCAL node -r ts-node/register/transpile-only index.ts",
+    "run:worker": "APP_ENV=LOCAL node -r ts-node/register/transpile-only index-worker.ts",
     "start": "concurrently npm:run*",
+    "start:bun": "concurrently npm:bun*",
     "migration:generate": "tsx migration.ts generate",
     "migration:run": "tsx migration.ts run",
     "migration:revert": "tsx migration.ts revert",
