--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,8 +33,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "src/index.ts",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "src/**/*",
     "cli/**/*"
