--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,16 +11,16 @@
     "populate": "tsx populate-dev-server.ts",
     "bun:server": "APP_ENV=LOCAL bun run index.ts",
     "bun:worker": "APP_ENV=LOCAL bun run index-worker.ts",
-    "run:server": "APP_ENV=LOCAL node -r ts-node/register/transpile-only index.ts",
-    "run:worker": "APP_ENV=LOCAL node -r ts-node/register/transpile-only index-worker.ts",
+    "run:server": "APP_ENV=LOCAL node index.ts",
+    "run:worker": "APP_ENV=LOCAL node index-worker.ts",
     "start": "concurrently npm:run*",
     "start:bun": "concurrently npm:bun*",
-    "migration:generate": "tsx migration.ts generate",
-    "migration:run": "tsx migration.ts run",
-    "migration:revert": "tsx migration.ts revert",
-    "load-test:1k": "tsx load-testing/run-load-test.ts 1000",
-    "load-test:10k": "tsx load-testing/run-load-test.ts 10000",
-    "load-test:100k": "tsx load-testing/run-load-test.ts 100000"
+    "migration:generate": "bun run migration.ts generate",
+    "migration:run": "bun run migration.ts run",
+    "migration:revert": "bun run migration.ts revert",
+    "load-test:1k": "bun run load-testing/run-load-test.ts 1000",
+    "load-test:10k": "bun run load-testing/run-load-test.ts 10000",
+    "load-test:100k": "bun run load-testing/run-load-test.ts 100000"
   },
   "dependencies": {
     "@angular/cdk": "^17.2.2",
