--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "jsx": "react-jsx",
-        "module": "commonjs",
+        "module": "NodeNext",
+        "moduleResolution": "node16",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "emitDecoratorMetadata": true,
@@ -15,6 +16,6 @@
         "outDir": "./dist",
         "baseUrl": "./"
     },
-    "exclude": ["node_modules", "admin_ui", "dist", "static", "./test-plugins", "./load-tesing", "./example-plugins"],
+    "exclude": ["node_modules", "admin_ui", "dist", "static", "./test-plugins", "./load-tesing", "./example-plugins", "cockroachdb-search-strategy.ts"],
     "ts-node": { "files": true }
 }
