--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,43 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*/index.d.ts",
+        "dist/*.d.ts"
+      ]
+    }
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "bun": "./src/*.ts",
+      "import": "./dist/src/index.js",
+      "require": "./dist/src/index.js",
+      "default": "./dist/src/index.js",
+      "types": "./dist/src/index.d.ts"
+    },
+    "./cli": {
+      "bun": "./src/cli/index.ts",
+      "import": "./dist/cli/index.js",
+      "require": "./dist/cli/index.js",
+      "default": "./dist/cli/index.js",
+      "types": "./dist/cli/index.d.ts"
+    },
+    "./cli/*": {
+      "bun": "./src/cli/*.ts",
+      "import": "./dist/cli/*.js",
+      "require": "./dist/cli/*.js",
+      "default": "./dist/cli/*.js",
+      "types": "./dist/cli/*.d.ts"
+    },
+    "./mock-data/*": {
+      "bun": "./mock-data/*",
+      "default": "./mock-data/*"
+    },
+    "./dist/*": "./dist/*"
+  },
   "files": [
     "src/**/*",
     "cli/**/*"
