--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,8 +11,8 @@
     "populate": "tsx populate-dev-server.ts",
     "bun:server": "APP_ENV=LOCAL bun run index.ts",
     "bun:worker": "APP_ENV=LOCAL bun run index-worker.ts",
-    "run:server": "APP_ENV=LOCAL node index.ts",
-    "run:worker": "APP_ENV=LOCAL node index-worker.ts",
+    "run:server": "APP_ENV=LOCAL tsx index.ts",
+    "run:worker": "APP_ENV=LOCAL tsx index-worker.ts",
     "start": "concurrently npm:run*",
     "start:bun": "concurrently npm:bun*",
     "migration:generate": "bun run migration.ts generate",
