--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,8 +33,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "typesVersions": {
     "*": {
       "*": [
@@ -46,11 +46,18 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "bun": "./src/*.ts",
+      "bun": "./dist/src/index.js",
       "import": "./dist/src/index.js",
       "require": "./dist/src/index.js",
       "default": "./dist/src/index.js",
       "types": "./dist/src/index.d.ts"
+    },
+    "./src/*": {
+      "bun": "./src/*.ts",
+      "import": "./dist/src/*.js",
+      "require": "./dist/src/*.js",
+      "default": "./dist/src/*.js",
+      "types": "./dist/src/*.d.ts"
     },
     "./cli": {
       "bun": "./src/cli/index.ts",
