tsconfig exclude test?

--- a/plugins/replicate-simple-bg-plugin/src/plugin-server/tsconfig.json
+++ b/plugins/replicate-simple-bg-plugin/src/plugin-server/tsconfig.json
@@ -17,5 +17,6 @@
 		"newLine": "LF",
 		"resolveJsonModule": true,
 		"outDir": "../../dist/plugin-server"
-	}
+	},
+    "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
