--- a/plugins/asset-server-plugin/package.json
+++ b/plugins/asset-server-plugin/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@deenruv/asset-server-plugin",
   "version": "0.1.39",
-  "main": "src/plugin.ts",
-  "types": "src/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "src/**/*"
+    "lib/**/*"
   ],
   "license": "MIT",
   "scripts": {
