--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -64,16 +64,18 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "~10.3.10",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/serve-static": "^4.0.2",
     "@ng-select/ng-select": "^12.0.7",
+    "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.2",
     "typescript": "5.3.3",
-    "reflect-metadata": "^0.2.2",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
     "@deenruv/testing": "workspace:*",
     "@deenruv/ui-devkit": "workspace:*",
+    "@types/progress": "^2.0.7",
     "commander": "^12.0.0",
     "concurrently": "^8.2.2",
     "csv-stringify": "^6.4.6",
