--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build:test": "tsc -p tsconfig.json",
+    "xsxabuild:test": "tsc -p tsconfig.json",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "populate": "tsx populate-dev-server.ts",
