--- a/plugins/email-plugin/package.json
+++ b/plugins/email-plugin/package.json
@@ -14,7 +14,7 @@
     "build": "rimraf lib && tsc -p ./tsconfig.build.json",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "vitest --config vitest.config.mts --run"
+    "aaaaaatest": "vitest --config vitest.config.mts --run"
   },
   "homepage": "https://www.deenruv.io/",
   "publishConfig": {
