--- a/plugins/order-reminder-plugin/package.json
+++ b/plugins/order-reminder-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@deenruv/phone-number-validation",
+  "name": "@deenruv/order-reminder-plugin",
   "version": "0.1.39",
   "homepage": "https://www.deenruv.com/",
   "license": "MIT",
@@ -18,17 +18,16 @@
     "lint:fix": "eslint --fix ./src/**/*.ts"
   },
   "dependencies": {
-    "@nestjs/graphql": "^12.2.0",
     "@deenruv/common": "workspace:^",
-    "@deenruv/react-ui-devkit": "workspace:^",
-    "libphonenumber-js": "^1.12.6"
+    "@nestjs/common": "~10.3.10"
   },
   "peerDependencies": {
+    "typeorm": "^0.3.20",
     "@deenruv/core": "^0.1.0"
   },
   "devDependencies": {
     "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.10",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   }
 }
