--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,9 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.18.0",
     "fumadocs-core": "^16.0.0",
     "fumadocs-mdx": "^14.0.0",
     "fumadocs-ui": "^16.0.0",
+    "lucide-react": "^0.511.0",
     "next": "^16.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
