--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ include:
       matrix:
         - APP: docs
           APP_ROOT: apps/docs
+          DOCKERFILE: apps/docs/Dockerfile
 
 .build_artifacts: &build_artifacts
   artifacts:
