--- a/apps/docs/Dockerfile
+++ b/apps/docs/Dockerfile
@@ -58,6 +58,5 @@ USER nextjs
 
 EXPOSE 3000
 ENV PORT=3000
-ENV HOSTNAME="0.0.0.0"
 
-CMD ["node", "server.js"]
+CMD ["sh", "-c", "HOSTNAME=:: node server.js"]
