--- a/package.json
+++ b/package.json
@@ -111,7 +111,9 @@
   "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6",
   "pnpm": {
     "overrides": {
-      "lucide-react": "^0.460.0"
+      "lucide-react": "^0.460.0",
+      "@types/react": "^18.3.23",
+      "@types/react-dom": "^18.3.7"
     }
   }
 }
