--- a/plugins/przelewy24-plugin/package.json
+++ b/plugins/przelewy24-plugin/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
     "recharts": "^2.12.7",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "ioredis": "^5.4.1"
   },
   "devDependencies": {
     "@deenruv/core": "workspace:^",
