refactor(przelewy24-plugin): migrate to @aexol/przelewy24-sdk, remove Redis PubSub
- Replace axios with @aexol/przelewy24-sdk for P24 API calls
- Remove blik-pubsub.service.ts and ioredis dependency
- Add GraphQL Shop API extension for BLIK status polling
- Add webhook signature verification and idempotency checks
- Fix docs lint script (next lint → next lint .)

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint ."
   },
   "dependencies": {
     "framer-motion": "^11.18.0",
